--- a/app/src/main/res/layout/recycle_list_item.xml
+++ b/app/src/main/res/layout/recycle_list_item.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/img"
         android:layout_width="98dp"
-        android:layout_height="82dp"
+        android:layout_height="81dp"
         android:layout_marginStart="31dp"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="14dp"
@@ -21,10 +21,10 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="242dp"
+        android:layout_height="78dp"
         android:layout_marginEnd="16dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img"
@@ -34,14 +34,23 @@
             android:id="@+id/txtView"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="Teste"
+            android:padding="5dp"
             android:textAlignment="center"
-            android:textStyle="bold"
+            android:textAllCaps="true"
             android:textColor="@color/purple_700"
             android:textSize="20sp"
-            android:textAllCaps="true"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtView2"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:padding="5dp"
-            />
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/purple_700"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
